--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		html{
 		   overflow-y: scroll;
 		}
-		code{font-size:14; background: #f2f2f2; color:grey;}
+		code{font-size:14; background: #FAF8F9; color:grey;}
 
 		.unselectable {
 		    -webkit-touch-callout: none;
@@ -1168,7 +1168,7 @@
 													c & a & t & \\
 													c & t & a & \\
 													t & a & c & 
-												\end{array}.\square
+												\end{array}. \ \square
 												$
 											</li>
 										</u>
@@ -1181,10 +1181,10 @@
 									<td style="vertical-align:top; padding:0 0 0 10">
 										<ol type="a" style="padding:0 0 0 20">
 											<li>
-												$8!=P(8,8).$
+												$8!=P(8,8). \ \square$
 											</li>
 											<li>
-												$(7!, 6!)$
+												$7!, \ \text{and} \ 6!. \ \square$
 											</li>
 										</ol>
 									</td>
@@ -1241,6 +1241,22 @@
 							        </td>
 						      	</tr>
 						    </table>
+						    <table style="vertical-align:top; padding: 20 20 0 0">
+						     	<tr>
+									<td style="vertical-align:top; padding: 0 00 0 00">17.</td>
+					        		<td style="vertical-align:top; padding: 0 20 0 10">
+					        			In the Internet, each network interface of a computer is asigned one, or more, Internet addresses. The nature of these Internet addresses is dependent on network size. For the Internet Standard regarding reserved network numbers (STD 2), each address is a 32&ndash;bit string which falls into one of the following three classes: (1) a class A address, used for the largest networks, begins with a 0, which is then followed by a 7&ndash;bit <code>network number</code>, and then a 24&ndash;bit <code>local address</code>. However, one is restricted from using the network numbers of all 0's or all 1's. (2) The class B address is meant for an intermediate&ndash;sized network. This address starts with the 2&ndash;bit string 10, which is followed by a 14&ndash;bit network number and a 16&ndash;bit local address. But the local addresses of all 0's or all 1's are not permitted. (3) Class C addresses are used for the smalles networks. These addresses consist of the 3&ndash;bit string 110, followed by a 21&ndash;bit network number, and then an 8&ndash;bit local address. Once again, the local addressed of all 0's or all 1's are excluded. How many different addresses of each class are available on the Internet, for this Internet Standard?
+							        </td>
+						      	</tr>
+						    </table>
+						    <table style="vertical-align:top; padding: 20 20 10 0">
+						     	<tr>
+									<td style="vertical-align:top; padding: 0 00 0 00">18.</td>
+					        		<td style="vertical-align:top; padding: 0 20 0 10">
+					        			Morgan is considering the purchase of a low&ndash;end computer system. After some careful investigating, she finds that there are seven basic systems (each consisting of a monitor, CPU, keyboard, and mouse) that meet her reqiurements. Furthermore, she also plans to buy one of four modems, one of three CD ROM drives, and one of six printers. (Here, each peripheral device of a given type, such as the modem, is compatible with all seven basic systems.) In how many ways can Morgan configure her low&ndash;end computer system?
+							        </td>
+						      	</tr>
+						    </table>
 						</div>
 					</td>
 					<td style="vertical-align:top; 
@@ -1251,99 +1267,23 @@
 						<div style="height: 635; overflow:auto; padding:41 0 15 0">
 							<table>
 								<tr>
-									<td style="vertical-align:top; padding:0 10 0 0">9.</td>
-									<td style="vertical-align:top; padding:0 10 0 0">
-										After simplifying the given expressions, we have
-										<table style="padding:10 0 0 0">
-											<tr>
-												<td style="padding:0 10 0 0">(i)</td>
-												<td style="vertical-align:top; padding:0 0 0 0">
-													$|\sqrt{2} + \sqrt{3} - \sqrt{5} + \sqrt{7}| = \sqrt{2} + \sqrt{3} - \sqrt{5} + \sqrt{7}.$
-												</td>
-											</tr>				
-											<tr>
-												<td style="padding:0 10 0 0">(ii)</td>
-												<td style="vertical-align:top; padding:0 0 0 0">
-													$|(|a+b| - |a| - |b|)| = |a|+|b| - (|a|+|b|) = |a|+|b| - |a+b|.$
-												</td>
-											</tr>
-											<tr>
-												<td style="padding:0 10 0 0">(iii)</td>
-												<td style="vertical-align:top; padding:0 0 0 0">
-													$|(|a+b| + |c| - |a+b+c|)| = |a+b|+|c|-|a+b+c|.$
-												</td>
-											</tr>
-											<tr>
-												<td style="padding:0 10 0 0">(iv)</td>
-												<td style="vertical-align:top; padding:0 0 0 0">
-													$|x^2-2xy+y^2| = x^2-2xy+y^2$.
-												</td>
-											</tr>
-											<tr>
-												<td style="padding:0 10 0 0">(v)</td>
-												<td style="vertical-align:top; padding:0 0 0 0">
-													$|(|\sqrt{2} + \sqrt{3}| - |\sqrt{5} + \sqrt{7}|)| = \sqrt{2}+\sqrt{3}+\sqrt{5}-\sqrt{7}.$
-												</td>
-											</tr>
-										</table>
+									<td style="vertical-align:top; padding:0 0 0 00">14.</td>
+									<td style="vertical-align:top; padding:0 0 0 10">
+										Using the definition of permutation, we have
+										<ol type="a" style="padding:0 0 0 20">
+											<li>$P(7,2)=7!/(7-2)!=7!/5!=(7)(6)=42. \ \square$</li>
+											<li>$P(8,4)=8!/(8-4)!=8!/4!=(8)(7)(6)(5)=1680. \ \square$</li>
+											<li>$P(10,7)=10!/(10-7)!=10!/3!=(10)(9)(7)(6)(5)(4)=604,800. \ \square$</li>
+											<li>$P(12,3)=12!/(12-3)!=12!/9!=(12)(11)(10)=1320. \ \square$</li>
+										</ol>		
 									</td>
 								</tr>
 							</table>
-							<table style="padding:15 0 0 0">
+							<table style="padding:15 20 0 0">
 								<tr>
-									<td style="vertical-align:top; padding:0 10 0 0">10.</td>
-									<td style="vertical-align:top; padding:0 10 0 0">
-										The given expressions may be simplified as follows:
-										<table style="padding:10 0 0 0">
-											<tr>
-												<td style="padding: 0 10 0 0">(i)</td>
-												<td>
-													$
-													\begin{cases}
-														a & &  \text{if} \ \ -b \leq a \ \ \text{and} \ \ 0 \leq b; \\
-														-a  & & \text{if} \ \ a \leq -b \ \ \text{and} \ \ b \leq 0; \\
-														a+2b & & \text{if} \ \ -b \leq a \ \ \text{and} \ \ b \leq 0; \\
-														-a-2b & &  \text{if} \ \ a \leq -b \ \ \text{and} \ \ 0 \leq b.
-													\end{cases}
-													$
-												</td>
-											</tr>
-											<tr>
-												<td style="padding: 0 10 0 0">(ii)</td>
-												<td>
-													$
-													\begin{cases}
-													x-1 & &  \text{if} \ \ 1 \leq x; \\
-													1-x  & & \text{if} \ \ 0 \leq x \leq 1; \\
-													1+x & & \text{if} \ \ -1 \leq x \leq 0; \\
-													-1-x & &  \text{if} \ \ x \leq -1.
-													\end{cases}
-													$
-												</td>
-											</tr>
-											<tr>
-												<td style="padding: 0 10 0 0">(iii)</td>
-												<td>
-													$
-													\begin{cases}
-													x-x^2 & &  \text{if} \ \ 0 \leq x; \\
-													-x-x^2  & & \text{if} \ \ x \leq 0.
-													\end{cases}
-													$
-												</td>
-											</tr>
-											<tr>
-												<td style="padding: 0 10 0 0">(iv)</td>
-												<td>
-													$
-													\begin{cases}
-													a & &  \text{if} \ \ 0 \leq a; \\
-													3a  & & \text{if} \ \ a \leq 0.
-													\end{cases}
-													$
-												</td>
-											</tr>
-										</table>
+									<td style="vertical-align:top; padding:0 0 0 00">15.</td>
+									<td style="vertical-align:top; padding:0 0 0 10">
+										To solve this, we may place <code>a,b,c,d</code> in the respective positions denoted by <code>x</code>, that is, <code>e x e x e x e x e</code>. By the rule of product, there are $4!$ ways to accomplish this.
 									</td>
 								</tr>
 							</table>
