--- a/index.html
+++ b/index.html
@@ -1279,71 +1279,22 @@
 									</td>
 								</tr>
 							</table>
-							<table style="padding:15 20 0 0">
+							<table style="padding:0 20 0 0">
 								<tr>
 									<td style="vertical-align:top; padding:0 0 0 00">15.</td>
 									<td style="vertical-align:top; padding:0 0 0 10">
-										To solve this, we may place <code>a,b,c,d</code> in the respective positions denoted by <code>x</code>, that is, <code>e x e x e x e x e</code>. By the rule of product, there are $4!$ ways to accomplish this.
+										To solve this, we may place <code>a,b,c,d</code> in the respective positions denoted by <code>x</code>, that is, <code>e x e x e x e x e</code>. By the rule of product, there are $4!$ such arrangements. $\square$
 									</td>
 								</tr>
 							</table>
-							<table style="padding:15 0 0 0">
+							<table style="padding:20 0 0 0">
 								<tr>
-									<td style="vertical-align:top; padding:0 10 0 0">11.</td>
-									<td style="vertical-align:top; padding:0 10 0 0">
-										These problems draw on propereties of inequality and absolute value.
-										<table style="padding:10 0 0 0">
-											<tr>
-												<td style="vertical-align:top; padding: 0 10 0 0">(i)</td>
-												<td style-"vertical-align:top; padding: 0 0 0 0">$x=-5, 11.$</td>
-											</tr>
-											<tr>
-												<td style="vertical-align:top; padding: 0 10 0 0">(ii)</td>
-												<td style-"vertical-align:top; padding: 0 0 0 0">
-													$-5 \leq x \leq 11.$
-												</td>
-											</tr>
-											<tr>
-												<td style="vertical-align:top; padding: 0 10 0 0">(iii)</td>
-												<td style-"vertical-align:top; padding: 0 0 0 0">
-													$-6 \leq x \leq -2.$
-												</td>
-											</tr>
-											<tr>
-												<td style="vertical-align:top; padding: 0 10 0 0">(iv)</td>
-												<td style-"vertical-align:top; padding: 0 0 0 0">
-													$x < 1 \ \text{or} \ 2 < x.$ (Notice that the distance from $x$ to 1 plus the distance from 
-													<br>
-													$x$ to 2 equals 1 precisely when $1 \leq x \leq 2.)$
-												</td>
-											</tr>
-											<tr>
-												<td style="vertical-align:top; padding: 0 10 0 0">(v)</td>
-												<td style-"vertical-align:top; padding: 0 0 0 0">
-													No $x$ (the distance from $x$ to 1 plus the distance from $x$ to $-1$ is at least 2.)
-												</td>
-											</tr>
-											<tr>
-												<td style="vertical-align:top; padding: 0 10 0 0">(vi)</td>
-												<td style-"vertical-align:top; padding: 0 0 0 0">
-													No $x$.
-												</td>
-											</tr>
-											<tr>
-												<td style="vertical-align:top; padding: 0 10 0 0">vii)</td>
-												<td style-"vertical-align:top; padding: 0 0 0 0">
-													$x=-1,1.$
-												</td>
-											</tr>
-											<tr>
-												<td style="vertical-align:top; padding: 0 10 0 0">(viii)</td>
-												<td style-"vertical-align:top; padding: 0 0 0 0">
-													If $x > 1 \ \text{or} \ x < -2,$ then the conditiont becomes $(x-1)()x+2)=3,$ or $x^2+x-5=0,$ for which the solutions are 
-													$(-1+\sqrt{21})/2$, $(-1-\sqrt{21})/2.$ Since the first is $>1$ and the second is $< 2,$ both are solutions to the equation
-													$|x-1| \cdot |x+2|=3.$ For $-2 < x < 1$ the conditions becomes $(1-x)(x+2)=3$ or $x^2+x+1=0,$ which has no solutions. $ \ \ \square \ \color{lightgrey}{&#9733;}$
-												</td>
-											</tr>
-										</table>
+									<td style="vertical-align:top; padding:0 0 0 00">16.</td>
+									<td style="vertical-align:top; padding:0 0 0 10">
+										<ol type="a" style="padding:0 0 0 20">
+											<li>With repetitions allowed, there are $40^{25}$ unique messages. $\square$</li>
+											<li>By the rule of product, there are $40\cdot30\cdots30\cdot40=(40^2)(30^{23})$ messages. $\square$</li>
+										</ol>
 									</td>
 								</tr>
 							</table>
