--- a/index.html
+++ b/index.html
@@ -1320,6 +1320,14 @@
 									</td>
 								</tr>
 							</table>
+							<table style="padding:10 20 10 0">
+								<tr>
+									<td style="vertical-align:top; padding:0 0 0 00">18.</td>
+									<td style="vertical-align:top; padding:0 0 0 10">
+										From the rule of product, we learn that Morgan has $7\cdot4\cdot3\cdot6=504,$ unique configurations available to her. $\square$
+									</td>
+								</tr>
+							</table>
 						</div>
 					</td>
 				</tr>
