--- a/P_sets/index.html
+++ b/P_sets/index.html
@@ -1324,7 +1324,7 @@
 								<tr>
 									<td style="vertical-align:top; padding:0 0 0 00">18.</td>
 									<td style="vertical-align:top; padding:0 0 0 10">
-										From the rule of product, we learn that Morgan has $7\cdot4\cdot3\cdot6=504,$ unique configurations available to her. $\square$
+										From the rule of product, we learn that Morgan has $7\cdot4\cdot3\cdot6=504$ unique configurations available to her. $\square$
 									</td>
 								</tr>
 							</table>
@@ -1347,82 +1347,66 @@
 									font-size:18">
 							Fundamental Principles of Counting
 						</p>
-						<div class="c1p12">
+						<div class="c1p6">
 							<table style="padding: 10 0 0 0">
 								<tr>
-									<td style="vertical-align:top; padding:1 10 0 0">12.</td>
-									<td style="padding: 1 0 0 0">
-						            	Prove the following:
-							            <table>
-							              	<tr>
-							                	<td style="padding: 0 0 0 00; vertical-align:top">(i)</td>
-							                	<td style="padding: 1 0 0 10; vertical-align:top">
-							                  		$|xy| = |x| \cdot |y|.$
-							                	</td>
-							              	</tr>
-							              	<tr>
-							                	<td style="padding: 0 0 0 00; vertical-align:top">(ii)</td>
-							                	<td style="padding: 0 0 0 10; vertical-align:top">
-							                    	$\lvert 1/x \ \rvert = 1/|x|, \ \text{if} \ x \neq 0. \ (\text{The best way to do this is to remember what}$ $|x|^{-1}$ is.)
-							                	</td>
-							              	</tr>
-							              	<tr>
-							                	<td style="padding: 0 0 0 00">(iii)</td>
-							                	<td style="padding: 0 0 0 10; vertical-align:top">
-							                    	$|x|/|y| = \lvert x/y \rvert, \ \text{if} \ y \neq 0.$
-							                	</td>
-							              	</tr>
-							              	<tr>
-							                	<td style="padding: 0 0 0 00; vertical-align:top">(iv)</td>
-							                	<td style="padding: 0 0 0 10; vertical-align:top">
-							                  		$|x - y| \leq |x| + |y|.$ (Give a very short proof.)
-							                	</td>
-							              	</tr>
-							              	</tr>
-							              	<tr>
-							                	<td style="padding: 0 0 0 00; vertical-align:top">(v)</td>
-							                	<td style="padding: 0 0 0 10; vertical-align:top">
-							                  		$|x| - |y| \leq |x  -  y|.$ (A very short proof is possible if you write things in the right way.)
-							                	</td>
-							              	</tr>
-							              	</tr>
-							              	<tr>
-							                	<td style="padding: 0 0 0 00; vertical-align:top">(vi)</td>
-							                	<td style="padding: 0 0 0 10; vertical-align:top">
-							                  		$|(|x| - |y|)| \leq |x - y|.$ (Why does this follow immediately from (v)?)
-							                	</td>
-							              	</tr>
-							              	<tr>
-							                	<td style="padding: 0 0 0 0; vertical-align:top">(vii)</td>
-							                	<td style="padding: 0 0 0 10; vertical-align:top">
-							                  		$|x+y+z| \leq |x| + |y| + |z|.$ Indicate when equality holds, and prove your statement.
-							                	</td>
-							              	</tr>
-							            </table>
-						        	</td>
-						      	</tr>
-						    </table>
-							<table style="vertical-align:top; padding: 18 0 0 0">
-						      	<tr>
-						        	<td style="vertical-align:top">13.</td>
-						        	<td style="padding: 0 0 0 10">
-						        		The maximum of two numbers $x$ and $y$ is denoted by $\text{max}(x, y)$. Thus $\text{max}(-1,3) = \text{max}(3,3) = 3$, and 
-						            	$\text{max}(-1,-4) = \text{max}(-4,-1) = -1$. The minumum of $x$ and $y$ is denoted by $\text{min}(x,y)$. Prove that
-						            	$$
-							            \begin{align}
-							            	\begin{split}
-							            		\text{max}(x,y) &= \frac{x+y+|y-x|}{2}, \\ 
-							            		\text{min}(x,y) &= \frac{x+y-|y-x|}{2}.
-							            	\end{split}
-							            \end{align}
-							            $$
-							            Derive a formula for $\text{max}(x,y,z)$ and $\text{min}(x,y,z)$, using, for example 
-							            $$
-							            \text{max}(x,y,z) = \text{max}(x, \text{max}(y,z)).
-							            $$
-						        	</td>
-						      	</tr>
-						    </table>
+									<td style="vertical-align:top; padding: 0 00 0 00">19.</td>
+					        		<td style="vertical-align:top; padding: 0 20 0 10">
+					        			A computer science professor has seven different programming books on a bookshelf. Three of the books deal with C++, the other four with Java. In how many ways can the professor arrange the books on the shelf
+					        			 <ol type="a">
+					        			 	<li>if there are no restrictions?</li>
+					        			 	<li>if the languages should alternate?</li>
+					        			 	<li>if all the C++ books must be next to each other?</li>
+					        			 	<li>
+					        			 		if all the C++ books must be next to each other, and all the Java books must be next to each other?
+					        			 	</li>
+					        			</ol>
+					        		</td>
+					      		</tr>
+					    	</table>
+							<table style="padding: 10 0 0 0">
+								<tr>
+									<td style="vertical-align:top; padding: 0 00 0 00">20.</td>
+					        		<td style="vertical-align:top; padding: 0 20 0 10">
+					        			Over the Internet, data are transmitted in structured blocks of bits called datagrams.
+					        			 <ol type="a">
+					        			 	<li>In how many ways can the letters in DATAGRAM be arranged?</li>
+					        			 	<li>For the arrangements of part (a), how many have all three As together?</li>
+					        			</ol>
+					        		</td>
+					      		</tr>
+					    	</table>
+					    	<table style="padding: 10 0 0 0">
+								<tr>
+									<td style="vertical-align:top; padding: 0 00 0 00">21.</td>
+					        		<td style="vertical-align:top; padding: 0 20 0 10">
+					        			 <ol type="a" style="vertical-align:top; padding: 0 0 0 20">
+					        			 	<li>How many arrangments are there of all the letters in SOCIOLOGICAL?</li>
+					        			 	<li>In how many of the arrangements in part (a) are A and G adjacent?</li>
+					        			 	<li>In how many of the arrangements in part (a) are all the vowels adjacent?</li>
+					        			</ol>
+					        		</td>
+					      		</tr>
+					    	</table>
+					    	<table style="padding: 10 0 0 0">
+								<tr>
+									<td style="vertical-align:top; padding: 0 00 0 00">22.</td>
+					        		<td style="vertical-align:top; padding: 0 20 0 10">
+					        			How many positive integers $n$ can we form using the digits $3,4,4,5,5,6,7$ if we want $n$ to exceed $5,000,000?$
+					        		</td>
+					      		</tr>
+					    	</table>
+					    	<table style="padding: 20 0 0 0">
+								<tr>
+									<td style="vertical-align:top; padding: 0 00 0 00">23.</td>
+					        		<td style="vertical-align:top; padding: 0 20 0 10">
+					        			Twelve clay targets (identical in shape) are arranged in four hanging columns, as shown in the figure below. There are four red targets in the first column, three white ones in the second column, two green targets in the third column, and three blue ones in the fourth column. To join her college drill team, Deborah must break all twelve of these targets (using her pistol and only twelve bullets) and in so doing must always break the existing tartget at the bottom of a column. Under these conditions, in how many different orders can Deborah shoot down (and break) the twelve targets?
+					        			<div style="padding:10 0 0 0">
+					        				<canvas id="C1_p23" data-processing-sources="C1_p23/c1_p23.pde" width="480" height="250"></canvas>
+					        			</div>
+					        		</td>
+					      		</tr>
+					    	</table>
 						</div>
 					</td>
 					<td style="vertical-align:top; 
